fix wrapping in smaller vw's

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif;
-    flex-wrap: wrap;
 }
 
 #header, .content-sections, #footer {
@@ -73,9 +72,14 @@ h1 {
     background-color: var(--dark-sct-bg-colour);
     justify-content: space-evenly;
     gap: 50px;
+    flex-wrap: wrap;
+    padding: 36px inherit;
 }
 
 #first > * {
+}
+
+#first-text {
     flex: 1;
 }
 
@@ -83,6 +87,7 @@ h1 {
     color: var(--dark-sct-primary-colour);
     font-size: 48px;
     font-weight: 900;
+    margin-top: 36px;
 }
 
 #first-text > p {
@@ -101,13 +106,16 @@ h1 {
 }
 
 #section-one-image {
-    max-width: 400px;
+    width: 400px;
+    height: 210px;
+    /* max-width: 400px;
     max-height: 210px;
-    aspect-ratio: 2/1.2;
+    aspect-ratio: 2/1.2; */
     background-color: #888;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 36px;
 }
 
 /* Second Section (Features) */
@@ -122,12 +130,13 @@ h1 {
 .features {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
 .feature-item {
     text-align: center;
-    font-size: 18px;
+    font-size: 14px;
     flex: 1;
 }
 
@@ -175,11 +184,13 @@ h1 {
     height: 150px;
     width: 100%;
     background-color: var(--action-colour);
-    border-radius: 80px;
+    border-radius: 70px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     margin: 50px;
+    padding: 20px;
     font-size: 18px;
 }
 
